--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %} {% endblock %}</title>
+    <title>Acasă</title>
     <script src="https://kit.fontawesome.com/fe05dcfe42.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
@@ -26,10 +26,7 @@
               <a class="nav-link" href="#">Problemă matematică</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-               
-                
-              </a>
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filosofi</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Arthur Schopenhauer</a></li>
                 <li><a class="dropdown-item" href="#">Albert Camus</a></li>
@@ -48,9 +45,16 @@
       </div>
     </nav>
 
-    {% block content %}
+<h1>
 
-    {% endblock %}
+  Hello boys
+</h1>
+
+<div>
+
+  <img src="./Resources/Images/circle-table.png" alt="Image" >
+
+</div>
 
     <footer class="text-center text-white mt-auto" style="background-color: #A1887F;">
       <!-- Grid container -->
