Creare sablon index

--- a/index.html
+++ b/index.html
@@ -45,16 +45,51 @@
       </div>
     </nav>
 
-<h1>
+  <h1>
 
-  Hello boys
-</h1>
+    Hello boys
+  </h1>
 
-<div>
+  <div>
 
-  <img src="./Resources/Images/circle-table.png" alt="Image" >
 
-</div>
+    <div>
+      <img src="./Resources/Images/icon_philosopher/Arthur_Schopenhauer.png" alt="Image" href="/philosopher.html" >
+    </div>
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/albert_camus.jpg" alt="Image" href="/philosopher.html">
+    </div>
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/baruch_spinoza.jpg" alt="Image" href="/philosopher.html" >
+    </div>
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/Friedrich_Nietzsche.jpg" alt="Image" href="/philosopher.html" >
+    </div>
+
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/imanuel_kant.jpg" alt="Image" href="/philosopher.html" >
+    </div>  
+
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/Goethe.jpg" alt="Image" href="/philosopher.html" >
+    </div>
+
+
+    <div>
+      <img src="./Resources/Images/icon_philosopher/sigmund_freud.jpg" alt="Image" href="/philosopher.html">
+    </div>
+
+
+    <div>
+      <img src="./Resources/Images/circle-table.png" alt="Image" href="/philosopher.html" >
+    </div>
+
+  </div>
 
     <footer class="text-center text-white mt-auto" style="background-color: #A1887F;">
       <!-- Grid container -->
