--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <a class="nav-link active" aria-current="page" href="#">Acasă</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Problemă matematică</a>
+              <a class="nav-link" href="#math_problem.html">Problemă matematică</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filosofi</a>
+              <a class="nav-link dropdown-toggle" href="#philosopher.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">Filosofi</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Arthur Schopenhauer</a></li>
                 <li><a class="dropdown-item" href="#">Albert Camus</a></li>
