--- a/philosopher.html
+++ b/philosopher.html
@@ -14,6 +14,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="philosopher.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #a1887f">
@@ -92,7 +93,7 @@
         <h4 class="card-header">Arthur Schopenhauer</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/Arthur_Schopenhauer.png"
                 class="img-fluid img-thumbnail"
@@ -157,7 +158,7 @@
         <h4 class="card-header">Albert Camus</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/albert_camus.jpg"
                 class="img-fluid img-thumbnail"
@@ -222,7 +223,7 @@
         <h4 class="card-header">Baruch Spinoza</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/baruch_spinoza.jpg"
                 class="img-fluid img-thumbnail"
@@ -282,7 +283,7 @@
         <h4 class="card-header">Friedrich Nietzsche</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/Friedrich_Nietzsche.jpg"
                 class="img-fluid img-thumbnail"
@@ -348,7 +349,7 @@
         <h4 class="card-header">Imanuel Kant</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/imanuel_kant.jpg"
                 class="img-fluid img-thumbnail"
@@ -406,7 +407,7 @@
         <h4 class="card-header">Johann Wolfgang von Goethe</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/Goethe.jpg"
                 class="img-fluid img-thumbnail"
@@ -462,7 +463,7 @@
         <h4 class="card-header">Sigmund Freud</h4>
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-4">
+            <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/sigmund_freud.jpg"
                 class="img-fluid img-thumbnail style="
