Adding introduction for philosophers page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Acasă</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Acasă</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="math_problem.html"
@@ -55,24 +57,45 @@
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
-                >Filosofi</a
               >
+                Filosofi
+              </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Arthur Schopenhauer</a>
+                  <a class="dropdown-item" href="#section_arthur_schopenhauer"
+                    >Arthur Schopenhauer</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Albert Camus</a></li>
-                <li><a class="dropdown-item" href="#">Baruch Spinoza</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Friedrich Nietzsche</a>
+                  <a class="dropdown-item" href="#section_albert_camus"
+                    >Albert Camus</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Imanuel Kant</a></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="#section_baruch_spinoza"
+                    >Baruch Spinoza</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_freiedrich_nietzsche"
+                    >Friedrich Nietzsche</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_imanuel_kant"
+                    >Imanuel Kant</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_goethe"
                     >Johann Wolfgang von Goethe</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">Sigmund Freud</a></li>
+                <li>
+                  <a class="dropdown-item" href="#section_sigmund_freud"
+                    >Sigmund Freud</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -83,7 +106,7 @@
       </div>
     </nav>
 
-    <h1>Hello boys</h1>
+    <h1>Prânzul filosofilor</h1>
 
     <div>
       <div class="philosopers-icon">
