--- a/math_problem.html
+++ b/math_problem.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{% block title %} {% endblock %}</title>
+    <title>Problema matematică</title>
     <script
       src="https://kit.fontawesome.com/fe05dcfe42.js"
       crossorigin="anonymous"
@@ -86,7 +86,7 @@
       </div>
     </nav>
 
-    Hello boys
+    <h1>Problema matematică</h1>
 
     <footer
       class="text-center text-white mt-auto"
