--- a/philosopher.html
+++ b/philosopher.html
@@ -63,20 +63,40 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">Arthur Schopenhauer</a>
+                  <a class="dropdown-item" href="#section_arthur_schopenhauer"
+                    >Arthur Schopenhauer</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Albert Camus</a></li>
-                <li><a class="dropdown-item" href="#">Baruch Spinoza</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Friedrich Nietzsche</a>
+                  <a class="dropdown-item" href="#section_albert_camus"
+                    >Albert Camus</a
+                  >
                 </li>
-                <li><a class="dropdown-item" href="#">Imanuel Kant</a></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="#section_baruch_spinoza"
+                    >Baruch Spinoza</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_freiedrich_nietzsche"
+                    >Friedrich Nietzsche</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_imanuel_kant"
+                    >Imanuel Kant</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#section_goethe"
                     >Johann Wolfgang von Goethe</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">Sigmund Freud</a></li>
+                <li>
+                  <a class="dropdown-item" href="#section_sigmund_freud"
+                    >Sigmund Freud</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -87,8 +107,31 @@
       </div>
     </nav>
 
+    <div class="introduction">
+      <div class="introduction-content">
+        <h1>Filosofi</h1>
+        <div class="line"></div>
+        <p>
+          În aceast secțiunea vom încerca să prezentăm pe scurt viața și
+          contrubuția esențială pe care a avut-o fiecare în universul filosofic.
+        </p>
+        <p>
+          Pentru aceasta vom incerca să răspundem la câteva întrebări simple
+          precum:
+        </p>
+        <li class="question">Cine sunt ei?</li>
+        <li class="question">Când s-au născut?</li>
+        <li class="question">Unde au trăit?</li>
+        <li class="question">Ce au însemnat pentru societate?</li>
+        <li class="question">Care au fost interesele lor majore?</li>
+        <li class="question">
+          Cu ce au contribuit cel mai mult în dezvoltarea lumii?
+        </li>
+      </div>
+    </div>
+
     <br />
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_arthur_schopenhauer">
       <div class="card">
         <h4 class="card-header">Arthur Schopenhauer</h4>
         <div class="card mb-3">
@@ -96,6 +139,7 @@
             <div class="col-md-3">
               <img
                 src="Resources/Images/icon_philosopher/Arthur_Schopenhauer.png"
+                target="_blank"
                 class="img-fluid img-thumbnail"
                 alt="..."
               />
@@ -142,6 +186,7 @@
 
                 <a
                   href="https://ro.wikipedia.org/wiki/Arthur_Schopenhauer"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -153,7 +198,7 @@
     </div>
     <br />
 
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_albert_camus">
       <div class="card">
         <h4 class="card-header">Albert Camus</h4>
         <div class="card mb-3">
@@ -206,6 +251,7 @@
                 </blockquote>
                 <a
                   href="https://ro.wikipedia.org/wiki/Albert_Camus"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -218,7 +264,7 @@
 
     <br />
 
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_baruch_spinoza">
       <div class="card">
         <h4 class="card-header">Baruch Spinoza</h4>
         <div class="card mb-3">
@@ -267,6 +313,7 @@
                 </blockquote>
                 <a
                   href="https://ro.wikipedia.org/wiki/Baruch_Spinoza"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -278,7 +325,7 @@
     </div>
 
     <br />
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_freiedrich_nietzsche">
       <div class="card">
         <h4 class="card-header">Friedrich Nietzsche</h4>
         <div class="card mb-3">
@@ -332,6 +379,7 @@
 
                 <a
                   href="https://ro.wikipedia.org/wiki/Friedrich_Nietzsche"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -344,7 +392,7 @@
 
     <br />
 
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_imanuel_kant">
       <div class="card">
         <h4 class="card-header">Imanuel Kant</h4>
         <div class="card mb-3">
@@ -391,6 +439,7 @@
                 </blockquote>
                 <a
                   href="https://ro.wikipedia.org/wiki/Immanuel_Kant"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -402,7 +451,7 @@
     </div>
     <br />
 
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_goethe">
       <div class="card">
         <h4 class="card-header">Johann Wolfgang von Goethe</h4>
         <div class="card mb-3">
@@ -447,6 +496,7 @@
                 </blockquote>
                 <a
                   href="https://ro.wikipedia.org/wiki/Johann_Wolfgang_von_Goethe"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
@@ -458,7 +508,7 @@
     </div>
 
     <br />
-    <div class="shadow p-3 mb-5 bg-body rounded">
+    <div class="philosopher" id="section_sigmund_freud">
       <div class="card">
         <h4 class="card-header">Sigmund Freud</h4>
         <div class="card mb-3">
@@ -507,6 +557,7 @@
 
                 <a
                   href="https://ro.wikipedia.org/wiki/Sigmund_Freud"
+                  target="_blank"
                   class="btn btn-outline-secondary"
                   >Vezi articol</a
                 >
