--- a/math_problem.html
+++ b/math_problem.html
@@ -86,7 +86,23 @@
       </div>
     </nav>
 
-    <h1>Problema matematică</h1>
+    <div class="my-card">
+      <div class="introduction">
+        <div class="introduction-content">
+          <h1>Problema filozofilor</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="my-card">
+      <div class="definition"></div>
+    </div>
+
+    <div class="my-card">
+      <div class="bibliography">
+        <h2>Bibliografie</h2>
+      </div>
+    </div>
 
     <footer
       class="text-center text-white mt-auto"
