Create div with background

--- a/math_problem.html
+++ b/math_problem.html
@@ -14,6 +14,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="math_problem.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #a1887f">
@@ -86,21 +87,35 @@
       </div>
     </nav>
 
-    <div class="my-card">
-      <div class="introduction">
-        <div class="introduction-content">
-          <h1>Problema filozofilor</h1>
-        </div>
+    <div class="my-card introduction">
+      <div class="introduction-content">
+        <h1>Problema filozofilor</h1>
       </div>
     </div>
 
-    <div class="my-card">
-      <div class="definition"></div>
+    <div class="my-card definition">
+      <div class="definition-content"></div>
     </div>
 
-    <div class="my-card">
-      <div class="bibliography">
-        <h2>Bibliografie</h2>
+    <div class="my-card code">
+      <div class="code-content"></div>
+    </div>
+
+    <div class="my-card bibliography">
+      <h2>Bibliografie</h2>
+      <div class="bibliography-content">
+        <ul>
+          <li class="ack">
+            https://www.geeksforgeeks.org/dining-philosopher-problem-using-semaphores/
+          </li>
+          <li class="ack">
+            https://en.wikipedia.org/wiki/Dining_philosophers_problem
+          </li>
+          <li class="ack">
+            https://www.javatpoint.com/os-dining-philosophers-problem
+          </li>
+          <li class="ack"></li>
+        </ul>
       </div>
     </div>
 
