--- a/philosopher.html
+++ b/philosopher.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="philosopher.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #a1887f">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark bg-opacity-75 fixed-top py-lg-3 " >
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img
@@ -39,8 +39,8 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav ">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
                 >Acasă</a
@@ -61,46 +61,43 @@
               >
                 Filosofi
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" href="philosopher.html">
                 <li>
-                  <a class="dropdown-item" href="#section_arthur_schopenhauer"
+                  <a class="dropdown-item" href="philosopher.html#section_arthur_schopenhauer"
                     >Arthur Schopenhauer</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_albert_camus"
+                  <a class="dropdown-item" href="philosopher.html#section_albert_camus"
                     >Albert Camus</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_baruch_spinoza"
+                  <a class="dropdown-item" href="philosopher.html#section_baruch_spinoza"
                     >Baruch Spinoza</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_freiedrich_nietzsche"
+                  <a class="dropdown-item" href="philosopher.html#section_freiedrich_nietzsche"
                     >Friedrich Nietzsche</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_imanuel_kant"
+                  <a class="dropdown-item" href="philosopher.html#section_imanuel_kant"
                     >Imanuel Kant</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_goethe"
+                  <a class="dropdown-item" href="philosopher.html#section_goethe"
                     >Johann Wolfgang von Goethe</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#section_sigmund_freud"
+                  <a class="dropdown-item" href="philosopher.html#section_sigmund_freud"
                     >Sigmund Freud</a
                   >
                 </li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
         </div>
@@ -570,27 +567,33 @@
       </div>
     </div>
 
-    <!-- Footer -->
     <footer
-      class="text-center text-white mt-auto"
-      style="background-color: #a1887f"
-    >
+      class="text-center text-white mt-auto bg-dark bg-opacity-75">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Facebook -->
           <a
-            class="btn btn-outline-light btn-floating m-1"
-            href="#"
+            class="btn btn-outline-light btn-floating m-1 disabled"
+            href="https://www.facebook.com/"
             role="button"
+            
             ><i class="fab fa-facebook-f"></i
+          ></a>
+
+          <!-- Google -->
+          <a
+            class="btn btn-outline-light btn-floating m-1"
+            href="https://en.wikipedia.org/wiki/Dining_philosophers_problem"
+            role="button"
+            ><i class="fab fa-google"></i
           ></a>
 
           <!-- Instagram -->
           <a
-            class="btn btn-outline-light btn-floating m-1"
-            href="#"
+            class="btn btn-outline-light btn-floating m-1 disabled"
+            href="https://www.instagram.com/"
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
@@ -600,8 +603,8 @@
       <!-- Grid container -->
 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: #a1887f">
-        © 2022 Copyright:
+      <div class="text-center p-3 bg-dark bg-opacity-75">
+        © 2023 Copyright:
         <a class="text-white">Luca Paula</a>
       </div>
       <!-- Copyright -->
