Delete test files

--- a/philosopher.html
+++ b/philosopher.html
@@ -42,7 +42,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav ">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Acasă</a
               >
             </li>
@@ -53,7 +53,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
                 href="philosopher.html"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -605,7 +605,7 @@
       <!-- Copyright -->
       <div class="text-center p-3 bg-dark bg-opacity-75">
         © 2023 Copyright:
-        <a class="text-white">Luca Paula</a>
+        <a class="text-white"></a>
       </div>
       <!-- Copyright -->
     </footer>
