--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <!-- Copyright -->
       <div class="text-center p-3 bg-dark bg-opacity-75">
         © 2023 Copyright:
-        <a class="text-white">Luca Paula</a>
+        <a class="text-white"></a>
       </div>
       <!-- Copyright -->
     </footer>
