--- a/math_problem.html
+++ b/math_problem.html
@@ -42,12 +42,12 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav ">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link" aria-current="page" href="index.html"
                 >Acasă</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="math_problem.html"
+              <a class="nav-link active" href="math_problem.html"
                 >Problemă matematică</a
               >
             </li>
@@ -340,7 +340,7 @@
       <!-- Copyright -->
       <div class="text-center p-3 bg-dark bg-opacity-75">
         © 2023 Copyright:
-        <a class="text-white">Luca Paula</a>
+        <a class="text-white"></a>
       </div>
       <!-- Copyright -->
     </footer>
